tyling, linting, fix build issue

--- a/src/routes/blog/style.css
+++ b/src/routes/blog/style.css
@@ -5,6 +5,10 @@
   line-height: 1.6rem;
 }
 
+.blog {
+  padding: 20px;
+}
+
 .blogtitle {
   font-size: 2.2rem;
   font-weight: 400;
@@ -29,7 +33,7 @@
   display: block;
   max-width: 100%;
   color: rgb(57, 58, 52);
-  font-family: Consolas, "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
+  font-family: Consolas, 'Bitstream Vera Sans Mono', 'Courier New', Courier, monospace;
   direction: ltr;
   text-align: left;
   white-space: pre;
@@ -53,7 +57,7 @@ code.inline {
   max-width: 100%;
   overflow: scroll;
   color: rgb(57, 58, 52);
-  font-family: Consolas, "Bitstream Vera Sans Mono", "Courier New", Courier;
+  font-family: Consolas, 'Bitstream Vera Sans Mono', 'Courier New', Courier;
   direction: ltr;
   text-align: left;
   white-space: pre;
