--- a/src/routes/home/home.css
+++ b/src/routes/home/home.css
@@ -46,12 +46,11 @@ h2 {
   opacity: 1;
 }
 
-
 @media only screen and (max-width: 768px) {
   .featured {
     position: absolute;
     top: 100px;
-	width: 100%;
+    width: 100%;
     bottom: 0;
     background-size: cover;
   }
@@ -68,21 +67,26 @@ h2 {
   }
 }
 
-/* @media only screen and (min-width: 1024px) {
-  img {
-    max-width: 100%;
-    max-height: 90%;
-    margin: auto;
-    object-fit: cover;
+@media only screen and (min-width: 769px) {
+  .featured {
+    position: absolute;
+    top: 100px;
+    width: 100%;
+    bottom: 0;
+    background-size: cover;
   }
 
   .featured_image {
-    display: grid;
-    max-height: 90%%;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    text-align: right;
   }
 
   .featured_blog {
-    width: 300px;
-    padding-left: 50px;
+    padding: 50px;
+    width: 100%;
   }
-} */
+}
